--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "express-session": "^1.17.3",
     "express-session-mongodb": "^1.3.3",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
+    "react-auth-kit": "^3.0.0-alpha.44",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "tachyons": "^4.12.0",
