--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.2.0",
     "react-auth-kit": "^2.12.7",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.6",
     "react-scripts": "^5.0.1",
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
