--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
     "react-scripts": "^5.0.1",
+    "react-virtualized": "^9.22.5",
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
   },
