--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-scripts": "^5.0.1",
     "react-virtualized": "^9.22.5",
+    "react-window": "^1.8.10",
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
   },
